--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -22,4 +22,17 @@ main
         font-family: 'Lobster', cursive;
         text-align: center
         margin-top: 30px
+        
+.white
+    color: white
+
+.nav,
+.footer
+    height: 100px
+    width: 100%
+
+.footer-result,
+.footer-detail
+    margin-top: 30px
+
 
