--- a/sass/components/_navbar.sass
+++ b/sass/components/_navbar.sass
@@ -1,26 +1,21 @@
 
 .nav
-    height: 100px
-    width: 100%
     background: $navbar-bg
     +d-flex(center, space-between)
     .navbar-logo-box
         +d-flex(center, space-around)
-        padding: 15px
+        padding: 0 15px
         img
             height: 60px
         h5
             font-family: 'Lobster', cursive;
             font-size: 45px
-            color: white
             margin-left: 20px 
     .navbar-icons-box
         +d-flex(center, space-around)
         a
             i
                 font-size: 25px
-                color: white
-                padding: 10px 0
                 span
                     margin-left: 15px
                     font-size: 25px
