Fixing webhint errors

--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -10,8 +10,7 @@
     .detail-result-main-box
         width: 90%
     
-    .selectors-box
-        button
+    .search-button
             width: 100%
     
     .detail-carousel-item
@@ -33,91 +32,96 @@
         div
             margin: auto
 
-
-
-
-
 @media (min-width: 768px)
     .navbar-icons-box
         width: 300px
-    .float-left-md
-        display: float-left
+
     .nav
         +d-flex(center, space-around)
+    
     .selectors-box
         +d-flex(center, center)
+    
     .search-main-box,
     .detail-result-main-box
         width: 90%
         margin: auto
+    
     .detail-carousel-item
         img
             height: 600px
+    
     .general-data-box
         div
             +d-flex(center, space-around)
+    
     .google-map
         iframe
             height: 500px
+    
     .video
         iframe
             height: 350px
+    
     .footer
         +d-flex(center, space-around)
         ul
             width: 350px
 
-
-
-
-
 @media (min-width: 1024px)
+    
     .navbar-icons-box
         width: 400px
+    
     .detail-result-main-box
         width: 80%
         margin: auto
+    
     .video
         iframe
             height: 430px
 
-
-
-
 @media (min-width: 1440px)
+    
     .navbar-icons-box
         width: 500px
+    
     .search-main-box
         width: 80%
+    
     .selectors-box
         h5
             font-size: 20px
+    
     .results-main-box 
         width: 80%
+    
     .detail-carousel-item
         img
             height: 700px
+    
     .video
         iframe
             height: 330px
+    
     .google-map
         iframe
             height: 400px
 
-
 @media (max-width: 1023px)
+    
     .d-none-sm-lg
         display: none
 
-
-
-
 @media (max-width: 1439px)
+    
     .results-main-box 
         width: 95%
+    
     .description-box
         p
             padding: 20px
+    
     .video,
     .google-map,
     .form-box
