--- a/sass/components/home/_main-home.sass
+++ b/sass/components/home/_main-home.sass
@@ -17,12 +17,16 @@ main
                     font-size: 18px
                     height: 100%
                     padding: 10px
-                button
+                .search-button
                     font-size: 18px
                     font-weight: bold
                     padding: 10px
                     border-radius: 5px
                     background: $navbar-bg
+                    text-align: center
+                    a
+                        &:hover
+                            color: $footer-bg
 
 .footer-home
     bottom: 0
