--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   .search-main-box,
   .detail-result-main-box {
     width: 90%; }
-  .selectors-box button {
+  .search-button {
     width: 100%; }
   .detail-carousel-item img {
     height: 300px; }
@@ -22,8 +22,6 @@
 @media (min-width: 768px) {
   .navbar-icons-box {
     width: 300px; }
-  .float-left-md {
-    display: float-left; }
   .nav {
     display: flex;
     align-items: center;
@@ -185,12 +183,15 @@ main .search-main-box {
       font-size: 18px;
       height: 100%;
       padding: 10px; }
-    main .search-main-box .search-box .selectors-box button {
+    main .search-main-box .search-box .selectors-box .search-button {
       font-size: 18px;
       font-weight: bold;
       padding: 10px;
       border-radius: 5px;
-      background: #B53471; }
+      background: #B53471;
+      text-align: center; }
+      main .search-main-box .search-box .selectors-box .search-button a:hover {
+        color: #3D3D3D; }
 
 .footer-home {
   bottom: 0; }
