--- a/sass/components/_variables.sass
+++ b/sass/components/_variables.sass
@@ -5,10 +5,14 @@ $border-white: 2px solid white
 
 
 
-$navbar-bg: #B53471
+$navbar-bg: #D35649
 $search-box-bg: rgba(149, 165, 166, .5)
 $result-box-bg: white
 $description: rgba(89, 98, 117, 1.0)
 $title-card: #1e272e
 $body-bg: rgba(223, 228, 234, .5)
-$footer-bg: #3D3D3D
+$footer-bg: black
+
+$bg-2: #98A4A5
+$bg-3: #509BD7
+
