Adding missing section to results page

--- a/sass/components/result/_main-result.sass
+++ b/sass/components/result/_main-result.sass
@@ -33,7 +33,20 @@
     .description
         color: $description
 
-
+.filters-main-box
+    h1
+        color: black
+    .filters-box
+        background: $search-box-bg
+        border-radius: 5px
+        padding: 20px
+        .selectors-box
+            select
+                font-size: 18px
+                height: 100%
+                padding: 10px
+            .filters-button
+                background: $navbar-bg
 
 
 
