--- a/css/styles.css
+++ b/css/styles.css
@@ -305,6 +305,20 @@ main .three-imgs-main-box .ti-box-3 {
   .result-text-box .description {
     color: #596275; }
 
+.filters-main-box h1 {
+  color: black; }
+
+.filters-main-box .filters-box {
+  background: rgba(149, 165, 166, 0.5);
+  border-radius: 5px;
+  padding: 20px; }
+  .filters-main-box .filters-box .selectors-box select {
+    font-size: 18px;
+    height: 100%;
+    padding: 10px; }
+  .filters-main-box .filters-box .selectors-box .filters-button {
+    background: #D35649; }
+
 .detail-result-main-box .detail-result-1 {
   margin-top: 30px; }
 
