--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @media (max-width: 767px) {
   .navbar-icons-box {
-    width: 100px; }
+    width: 90px; }
   .main-bg {
     position: relative;
     height: 550px;
@@ -126,7 +126,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   list-style: none;
   box-sizing: border-box;
   text-decoration: none; }
@@ -136,7 +136,6 @@
   background: rgba(223, 228, 234, 0.5); }
 
 main h1 {
-  font-family: 'Lobster', cursive;
   text-align: center;
   margin-top: 30px; }
 
@@ -165,7 +164,6 @@ main h1 {
     .nav .navbar-logo-box img {
       height: 60px; }
     .nav .navbar-logo-box h5 {
-      font-family: 'Lobster', cursive;
       font-size: 45px;
       margin-left: 20px; }
   .nav .navbar-icons-box {
