--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -2,7 +2,7 @@
     margin: 0
     padding: 0
     border: 0 
-    font-family: sans-serif
+    font-family: 'Roboto', sans-serif;
     list-style: none
     box-sizing: border-box
     text-decoration: none
@@ -14,7 +14,6 @@
 
 main
     h1
-        font-family: 'Lobster', cursive;
         text-align: center
         margin-top: 30px
         
