Showing second and third section on sm size

--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -50,6 +50,15 @@
     .footer
         div
             margin: auto
+    .ti-box
+        padding: 40px
+        .ti-text-box
+            margin: auto
+        img
+            display: block
+            margin: 30px auto 0 auto
+            width: 150px
+            height: 150px
 
 @media (min-width: 768px)
     .navbar-icons-box
@@ -100,6 +109,13 @@
         +d-flex(center, space-around)
         ul
             width: 350px
+    .ti-box
+        +d-flex(center, space-around)
+        padding: 20px
+        img
+            width: 250px
+            height: 250px
+
 
 @media (min-width: 1024px)
     
