--- a/sass/components/home/_main-home.sass
+++ b/sass/components/home/_main-home.sass
@@ -52,16 +52,12 @@ main
                     font-size: 50px
     .three-imgs-main-box
         .ti-box
-            +d-flex(center, space-around)
-            padding: 20px 0
-            div
+            .ti-text-box
                 h4
                     margin-bottom: 15px
                 .ti-btn
                     background: white
             img
-                width: 250px
-                height: 250px
                 border-radius: 50%
         .ti-box-1
             background: $navbar-bg
